force-app/main/default/objects/Account/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <description>Unique link between Salesforce and an external Electronic Health Record system</description>
    <externalId>true</externalId>
    <label>Patient ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>