force-app/main/default/objects/Account/fields/Primary_Care_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Primary_Care_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main point of contact managing a patient’s overall care.</description>
    <label>Primary Care Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>