force-app/main/default/objects/Account/fields/Specialty_Name__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Name__c</fullName>
    <label>Specialty Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Vascular Surgeon</fullName>
            </value>
            <value>
                <fullName>Primary Care Physician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>